--- a/_posts/2016-10-31-10000-lines-of-code.md
+++ b/_posts/2016-10-31-10000-lines-of-code.md
@@ -8,7 +8,7 @@ tags:
     - personal
 ---
 
-Malcolm Gladwell has this now-famous metric about how 10,000 hours of practice in a sport/trade/etc. is roughly the amount of time required to become a master in that area. Under a certain set of assumptions, this is about 5 years of full-time work. I've been working as a pseudo-journeyman programmer for about a year now, so I'm on my way, but I want to establish another somewhat arbitrary milestone: writing your first about 10,000 lines of code.
+Malcolm Gladwell has this now-famous metric about how 10,000 hours of practice in a sport/trade/etc. is roughly the amount of time required to become a master in that area. Under a certain set of assumptions, this is about 5 years of full-time work. I've been working as a pseudo-journeyman programmer for about a year now, so I'm on my way, but I want to establish another somewhat arbitrary milestone: writing your first 10,000 lines of code.
 
 Every Friday, I spend about 20 minutes taking stock of what I did over the course of the past week, update a running document with high-level summaries of projects I've worked on or am currently working on, and make a general plan for the week ahead. As part of that routine, I also do a quick linecount of the code I've written for various ad-hoc projects, data analytics research, and the small application I build and maintain at work. A few weeks ago this linecount breached the 10,000 mark. Thanks to the publicity-engine and PR aptitude of Gladwell, an immediate bell began going off in my head. My first thought was a bit of shock that in such a short time (around 9 months) I had managed to build up that much code. My second thought turned into a long silent trip down memory lane as I started to reflect on how much I learned -- sometimes the hard way -- in the course of writing those 10,000 lines. 
 
