--- a/_posts/2016-10-31-10000-lines-of-code.md
+++ b/_posts/2016-10-31-10000-lines-of-code.md
@@ -20,7 +20,7 @@ I am pretty sure that I've seen a T-shirt, coffee mug, or meme somewhere with th
 Ever wondered why the younger siblings always seem to be the 'better' athletes? There is a strong case to be made that it is because they are constantly playing-up, i.e. being mercilessly defeated (or not) by older siblings. This sort of constant challenge pushes them in ways you simply cannot get if you are surrounded by people of similar abilities. I think the same holds true professionally. But, if you are lacking mentorship, turning to the vast swaths of open-source code bases available online can be a fruitful second-best. Digesting that well-written code and borrowing from not only the code style but also the techniques can yield great benefit in your own projects.
 
 ### Develop good coding habits early
-Sadly, nothing new here again. Bad habits are hard to break. I remember reading this advice relatively early on [link here] in my transition to pseudo-journeyman and it's kept be honest and relatively anal about code style ever since. Not to mention, once you've written a significant amount of code with those bad habits shining through, it is a lot more painful to re-write than if you started with at least some good habits. No idea what constitute 'good' coding habits? Here are a couple of resources I've found incredibly useful as I've started trying to develop my own:
+Sadly, nothing new here again. Bad habits are hard to break. I remember reading this advice relatively early on in my transition to pseudo-journeyman and it's kept be honest and relatively anal about code style ever since. Not to mention, once you've written a significant amount of code with those bad habits shining through, it is a lot more painful to re-write than if you started with at least some good habits. No idea what constitute 'good' coding habits? Here are a couple of resources I've found incredibly useful as I've started trying to develop my own:
 
 1. [Clean Code](https://www.amazon.com/Clean-Code-Handbook-Software-Craftsmanship/dp/0132350882/ref=sr_1_1?ie=UTF8&qid=1477935335&sr=8-1&keywords=clean+code)
 2. [Code Complete](https://www.amazon.com/Code-Complete-Practical-Handbook-Construction/dp/0735619670/ref=sr_1_1?ie=UTF8&qid=1477935229&sr=8-1&keywords=code+complete)
